# openscad-toolkit

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
src/scadtools/: __init__.py  cli.py  compiler.py  watch.py
tests/: test_cli.py  test_compiler.py  test_stl_render.py
tests/fixtures/: block_statement.scad  customizer.scad  entry_overrides_use_var.scad  included_file.scad  multiline.scad  simple.scad  used_module.scad  used_with_shared_var.scad  vector_if.scad  with_include.scad  with_library.scad  with_missing_include.scad  with_missing_use.scad  with_use.scad
tests/fixtures/nested/: deep.scad  dep.scad
