[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scadtools"
dynamic = ["version"]
description = "OpenSCAD compiler and build tools"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.10"
authors = [
    { name = "Jonathan Huizingh" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
scad-compiler = "scadtools.cli:main"

[project.urls]
Homepage = "https://github.com/zing3d-labs/openscad-toolkit"
Repository = "https://github.com/zing3d-labs/openscad-toolkit"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools-scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
